[gd_scene load_steps=4 format=3 uid="uid://bvtk4rs7h7sup"]

[ext_resource type="Script" path="res://Scripts/Gimmicks/oil.gd" id="1_ebvky"]
[ext_resource type="Texture2D" uid="uid://bf6cekji71vif" path="res://Graphics/Items/MonitorIcons.png" id="1_ukbot"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_363g5"]
size = Vector2(32, 16)

[node name="Oil" type="Node2D"]
script = ExtResource("1_ebvky")

[node name="TopLeft" type="Sprite2D" parent="."]
top_level = true
z_index = 20
position = Vector2(-16, -16)
texture = ExtResource("1_ukbot")
centered = false
hframes = 11
vframes = 2
frame = 8

[node name="TopRight" type="Sprite2D" parent="."]
top_level = true
z_index = 20
position = Vector2(0, -16)
texture = ExtResource("1_ukbot")
centered = false
hframes = 11
vframes = 2
frame = 8

[node name="BottomLeft" type="Sprite2D" parent="."]
top_level = true
z_index = 20
position = Vector2(-16, 0)
texture = ExtResource("1_ukbot")
centered = false
hframes = 11
vframes = 2
frame = 8

[node name="BottomRight" type="Sprite2D" parent="."]
top_level = true
z_index = 20
texture = ExtResource("1_ukbot")
centered = false
hframes = 11
vframes = 2
frame = 8

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_363g5")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
